roles/monitoring/templates/ingresses.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-k8s
  namespace: monitoring
spec:
  tls:
    - hosts:
        - prometheus.homelab.markhudnall.com
      secretName: prometheus-homelab-markhudnall-com-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
spec:
  tls:
    - hosts:
        - grafana.homelab.markhudnall.com
      secretName: grafana-homelab-markhudnall-com-tls

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager-main
  namespace: monitoring
spec:
  tls:
    - hosts:
        - alertmanager.homelab.markhudnall.com
      secretName: alertmanager-homelab-markhudnall-com-tls
